# recurrent-planner

./: .gitignore  AGENT_HANDOFF.md  README.md  RUNBOOK_next_session.md  build_env_pod2.sh  eval_pretrained.py  export_wandb.py  pyproject.toml
checkpoints/cp_039997440/: cfg.json
checkpoints/cp_059996160/: cfg.json
checkpoints/cp_119992320/: cfg.json
checkpoints/cp_139991040/: cfg.json
checkpoints/cp_159989760/: cfg.json
checkpoints/cp_179988480/: cfg.json
checkpoints/cp_239984640/: cfg.json
checkpoints/cp_279982080/: cfg.json
checkpoints/slot_n100/cp_019998720/: cfg.json
checkpoints/slot_n100/cp_099993600/: cfg.json
checkpoints/slot_n100/cp_199987200/: cfg.json
cleanba/: attn_lstm.py  cellwise_lstm.py  cleanba_impala.py  config.py  convlstm.py  entmax.py  environments.py  impala_loss.py  load_and_eval.py  network.py  pool_inject_lstm.py  slot_lstm.py
experiments/: test_poolinject_smoke.py
experiments/interp/: README.md  _propcommon.py  attn.py  bellman.py  bind_bal.py  bind_bal2.py  binding_balanced.py  box_prop_attn.py  box_prop_drc.py  check_posbind.py  drc_box_gpi.py  drc_causal.py  drc_gpi.py  drc_propagation.py  e1.py  e10.py  e10_slot.py  e11.py  e12.py  e13.py  e13_slot.py  e1_slot.py  e2.py  e3.py  e4.py  e4_slot.py  e5.py  e5_slot.py  e6.py  e6b.py  e7.py  e7b.py  e8.py  e9.py  lookahead.py  perturb.py  plan.py  planning.py  planq.py  search.py  (+8 more)
paper/: README.md  experiments_report.tex  planning_emerges_relational.tex  references.bib
results/: README.md  RESULTS.md  interp_attn.py  interp_bellman_d3.py  interp_e10_d3.py  interp_e11_d3.py  interp_e12_d3.py  interp_e13_d3.py  interp_e1_d3.py  interp_e2_d3.py  interp_e3_d3.py  interp_e4_d3.py  interp_e5_d3.py  interp_e6_d3.py  interp_e6b_d3.py  interp_e7_d3.py  interp_e7b_d3.py  interp_e8_d3.py  interp_e9_d3.py  interp_lookahead_d3.py  interp_perturb_d3.py  interp_plan.py  interp_planning_d3.py  interp_planq_d3.py  interp_search_d3.py  interp_slots.py  interp_topo_d3.py  interp_wall_d3.py  launch_slots.sh  parse_pkls.py  plot.py  slot_binding_writeup.md  thinking_curve_vardepth.py
results/data/: thinking.csv
results/slot_n100/: training_curve.csv
results/slot_n50/: training_curve.csv
scripts/: setup_miniworld_pod.sh
tests/: check_attn_learns.py  check_entmax.py  check_env_obs.py  check_vardepth_grad.py  test_cellwise_lstm.py
writeup/: planning_emergence.tex
(+21 files in other folders)
